--- a/additem.css
+++ b/additem.css
@@ -7,7 +7,7 @@ body {
 
 /* Navbar styling */
 nav {
-    background-color: #007bff;
+    background-color:  rgb(27, 51, 98);
     color: white;
     padding: 15px;
     display: flex;
